Tune JVM args + update test plugins.